change icon marker

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           lat: 50.453614,
           lng: 30.50714
         },
-        map: map
+        map: map,
+        icon: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png'
       });
     }
   </script>
